examples/devboard-on-kind/06-postgres-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: postgres
  namespace: devboard-ns
  labels:
    app: devboard-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: devboard-postgres

    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
        - name: init
          mountPath: /docker-entrypoint-initdb.d
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
        - name: init
          configMap:
            name: postgres-init
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 0.5Gi
