examples/devboard-on-kind/10-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: devboard-fe
  namespace: devboard-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-fe
  template:
    metadata:
      labels:
        app: devboard-fe
    spec:
      containers:
      - name: devboard-frontend
        image: devboard-frontend:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4173
        readinessProbe:
          httpGet:
            path: /
            port: 4173
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 4173
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests: # minimum resource requirement
            cpu: 10m # 0.01 Cores of CPU
            memory: 64Mi # 67 Mb of RAM

          limits: # maximum resource requirement
            cpu: 250m # 0.25 Cores of CPU
            memory: 128Mi
