examples/devboard-on-kind/11-frontend-service.yml
# ClusterIP. On kind, ingress-nginx (12-ingress.yml) routes to this Service.
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: devboard-ns

spec:
  selector:
    app: devboard-fe

  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173 # container port
  type: ClusterIP
